# cargo-run-bin

./: .dprint.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  test.yml
src/: binary.rs  binary_test.rs  cargo_config.rs  cargo_config_test.rs  cli.rs  cli_integration_test.rs  lib.rs  main.rs  main_test.rs  metadata.rs  metadata_test.rs  shell_alias.rs  shell_alias_test.rs  shims.rs  shims_test.rs
src-bk/: main.rs
tests/: binary_test.rs  cargo_config_test.rs  cli_integration_test.rs  metadata_test.rs  shims_test.rs
tools/cargo-bin/: Cargo.toml
