[package]
name = "cargo-run-bin"
version = "1.3.0"
authors = ["Dustin Blackman"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
edition = "2021"
homepage = "https://github.com/dustinblackman/cargo-run-bin"
keywords = ["dev-experiance", "developer-experiance", "bin", "cache", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dustinblackman/cargo-run-bin"
description = "Build, cache, and run binaries scoped in Cargo.toml rather than installing globally. This acts similarly to npm run and gomodrun, and allows your teams to always be running the same tooling versions."

[[bin]]
name = "cargo-bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
clap = "4.3.19"
owo-colors = "3.5.0"
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.9"
toml_edit = "0.19.14"
version_check = "0.9.3"
which = "4.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
insta = { version = "1.31.0", features = ["yaml"] }

[package.metadata.bin]
cargo-binstall = { version = "1.2.0" }
cargo-cmd = { version = "0.3.1" }
cargo-deny = { version = "0.13.5" }
cargo-dist = { version = "0.1.0-prerelease.10" }
cargo-insta = { version = "1.31.0", locked = true }
cargo-llvm-cov = { version = "0.5.25" }
cargo-nextest = { version = "0.9.57", locked = true }
cargo-release = { version = "0.24.11" }
cargo-watch = { version = "8.4.0" }
committed = { version = "1.0.20" }
dprint = { version = "0.40.2" }
git-cliff = { version = "1.2.0" }
# Just added for testing
dustinblackman-hello-world = { version = "0.2.1", bins = ["hello-world-first", "hello-world-second"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.1.0-prerelease.10"
ci = ["github"]
installers = []
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
unix-archive = ".tar.gz"

# Config for 'cargo release'
[package.metadata.release]
pre-release-hook = ["bash", "-c", "cargo cmd lint && cargo cmd test && cargo bin git-cliff -o CHANGELOG.md --tag {{version}} && cargo bin dprint fmt"]
allow-branch = ["master"]

[package.metadata.commands]
lint = '''set -e
cargo cmd setup-nightly
cargo +runbin-nightly fmt -- --check
cargo clippy
cargo bin dprint check
cargo deny check licenses -s
'''
lint-fix = '''set -e
cargo cmd setup-nightly
cargo clippy --fix --allow-dirty
cargo fix --allow-dirty
cargo +runbin-nightly fmt
cargo bin dprint fmt
'''

get-nightly-name = 'echo runbin-nightly'
setup-nightly = '''
  export NIGHTLY=nightly-2023-06-16
  rustup toolchain list -v | grep -q "$NIGHTLY" || rustup toolchain install "$NIGHTLY" --force --component llvm-tools-preview rustfmt
  rustup toolchain link runbin-nightly "$(rustup toolchain list -v | grep $NIGHTLY | grep '^nightly-' | awk '{print $2}')"
'''

test-coverage = '''set -e
  cargo build
  cargo llvm-cov nextest --ignore-filename-regex='_test.rs'
'''
test-coverage-html = '''set -e
  cargo build
  cargo llvm-cov nextest --open --ignore-filename-regex='_test.rs'
'''
test-coverage-lcov = '''set -e
  cargo build
  rm -f lcov.info
  cargo llvm-cov nextest --lcov --output-path lcov.info --ignore-filename-regex='_test.rs'
'''
test = '''set -e
  cargo build
  cargo nextest run
'''
test-watch = '''set -e
  cargo watch -i .cargo -x 'cmd test'
'''
